--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div>
+    <div class="big_container">
       <div class="top">
         <div class="top_child">
           <div><img src="css/img/pet-resort-logo.webp" alt="loga" /></div>
@@ -19,10 +19,21 @@
           <div><h2>Rooms</h2></div>
         </div>
       </div>
-      <div class="img_big">
+      <div class="img_big down_left container padding">
+        <div class="conatiner">
+          <h1 class="white_text">Pet Resort</h1>
+          <p class="white_text">Where pets are royal</p>
+        </div>
+      </div>
+      <div class="grooming padding container">
+        <div><img src="css/img/groomin.webp" alt="" /></div>
         <div>
-          <h2 class="white">Pet Resort</h2>
-          <p class="white">Where pets are royal</p>
+          <h2>Oktober Groomin</h2>
+          <p>
+            Get your best friend ready for a total make-over while at the same
+            time being spoilt silly
+          </p>
+          <p><a href="dog.se">Book grooming</a></p>
         </div>
       </div>
     </div>
