--- a/assets/index.html
+++ b/assets/index.html
@@ -14,18 +14,25 @@
           <div><h2>Pet Resort</h2></div>
         </div>
         <div class="top_child">
-          <div><h2>Home</h2></div>
+          <nav class="menu">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Rooms</a></li>
+            </ul>
+          </nav>
+          <!-- <div><h2>Home</h2></div>
           <div><h2>About</h2></div>
-          <div><h2>Rooms</h2></div>
+          <div><h2>Rooms</h2></div> -->
         </div>
       </div>
-      <div class="img_big down_left container padding">
+      <div class="img_big down_left container radius">
         <div class="conatiner">
           <h1 class="white_text">Pet Resort</h1>
           <p class="white_text">Where pets are royal</p>
         </div>
       </div>
-      <div class="grooming padding container">
+      <div class="grooming radius container">
         <div><img src="css/img/groomin.webp" alt="" /></div>
         <div>
           <h2>Oktober Groomin</h2>
@@ -35,6 +42,78 @@
           </p>
           <p><a href="dog.se">Book grooming</a></p>
         </div>
+      </div>
+      <div class="partners container radius">
+        <h2>Partners</h2>
+        <p>
+          We partner with many influental companies to bring your pet the best
+          experience possible.
+        </p>
+        <div class="partners_logo">
+          <img src="css/img/logo-activision.webp" alt="logo-activision" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-AstraZeneca.webp" alt="logo-AstraZeneca" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-fedex.webp" alt="logo-fedex" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-chatgpt.webp" alt="logo-chatgpt" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-gucci.webp" alt="logo-gucci" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-lego.webp" alt="logo-lego" />
+        </div>
+        <div class="partners_logo">
+          <img src="css/img/logo-paypal.webp" alt="logo-paypal" />
+        </div>
+      </div>
+      <div class="column1 conatiner radius">
+        <div class="center">
+          <img
+            class="center"
+            src="css/img/dog-wear.webp"
+            alt="Cute dogs with cloths"
+          />
+        </div>
+
+        <h2>Merch</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ab ut
+          ratione nostrum, impedit blanditiis mollitia asperiores autem
+          consequatur hic animi eos ea repudiandae facilis aut earum voluptates
+          veritatis ducimus.
+        </p>
+        <a href="">Boka</a>
+      </div>
+      <div class="column2 conatiner radius">
+        <div class="center">
+          <img src="css/img/4dogs.webp" alt="4 dogs in a bed" />
+        </div>
+
+        <h2>Buddies for life</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
+          consequatur hic, deserunt recusandae sunt quos et maiores consequuntur
+          accusantium fugiat, ducimus fuga aut eligendi tempore natus unde
+          repudiandae? Esse, ea?
+        </p>
+        <a href="">Boka</a>
+      </div>
+      <div class="column3 conatiner radius">
+        <div class="center"><img src="css/img/ritz.webp" alt="cute dog" /></div>
+
+        <h2>Fine Dinening</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+          consequatur, eos sapiente beatae ut pariatur eligendi adipisci
+          obcaecati dolore explicabo minima quas, repudiandae, rem nesciunt qui
+          saepe atque maxime recusandae.
+        </p>
+        <a href="">Boka</a>
       </div>
     </div>
   </body>
