--- a/assets/index.html
+++ b/assets/index.html
@@ -7,34 +7,43 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="big_container">
+    <div class="wrapper">
       <div class="top">
         <div class="top_child">
           <div><img src="css/img/pet-resort-logo.webp" alt="loga" /></div>
           <div><h2>Pet Resort</h2></div>
         </div>
         <div class="top_child">
-          <nav class="menu">
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Rooms</a></li>
+          <nav>
+            <ul class="menu">
+              <li>
+                <a
+                  class="no_line"
+                  href="https://play.google.com/store/apps/details?id=com.google.android.apps.chromecast.app&hl=sv&pli=1"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  class="no_line"
+                  href="https://sv.bab.la/lexikon/engelsk-svensk/about"
+                  >About</a
+                >
+              </li>
+              <li><a class="no_line" href="https://rooms.xyz/">Rooms</a></li>
             </ul>
           </nav>
-          <!-- <div><h2>Home</h2></div>
-          <div><h2>About</h2></div>
-          <div><h2>Rooms</h2></div> -->
         </div>
       </div>
-      <div class="img_big down_left container radius">
-        <div class="conatiner">
+      <div class="img_big down_left radius">
+        <div class="conatiner img_text">
           <h1 class="white_text">Pet Resort</h1>
           <p class="white_text">Where pets are royal</p>
         </div>
       </div>
-      <div class="grooming radius container">
-        <div><img src="css/img/groomin.webp" alt="" /></div>
-        <div>
+      <div class="grooming radius container padding">
+        <div><img class="radius" src="css/img/groomin.webp" alt="" /></div>
+        <div class="grooming_text">
           <h2>Oktober Groomin</h2>
           <p>
             Get your best friend ready for a total make-over while at the same
@@ -43,7 +52,7 @@
           <p><a href="dog.se">Book grooming</a></p>
         </div>
       </div>
-      <div class="partners container radius">
+      <div class="partners container padding radius">
         <h2>Partners</h2>
         <p>
           We partner with many influental companies to bring your pet the best
@@ -71,15 +80,14 @@
           <img src="css/img/logo-paypal.webp" alt="logo-paypal" />
         </div>
       </div>
-      <div class="column1 conatiner radius">
-        <div class="center">
+      <div class="column1 container padding radius">
+        <div>
           <img
-            class="center"
+            class="radius"
             src="css/img/dog-wear.webp"
             alt="Cute dogs with cloths"
           />
         </div>
-
         <h2>Merch</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ab ut
@@ -89,11 +97,10 @@
         </p>
         <a href="">Boka</a>
       </div>
-      <div class="column2 conatiner radius">
-        <div class="center">
-          <img src="css/img/4dogs.webp" alt="4 dogs in a bed" />
+      <div class="column2 container padding radius">
+        <div>
+          <img class="radius" src="css/img/4dogs.webp" alt="4 dogs in a bed" />
         </div>
-
         <h2>Buddies for life</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
@@ -103,9 +110,10 @@
         </p>
         <a href="">Boka</a>
       </div>
-      <div class="column3 conatiner radius">
-        <div class="center"><img src="css/img/ritz.webp" alt="cute dog" /></div>
-
+      <div class="column3 container padding radius">
+        <div>
+          <img class="radius" src="css/img/ritz.webp" alt="cute dog" />
+        </div>
         <h2>Fine Dinening</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
