Font and centering container imges

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🐕 Pet Resort 🐾</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Gaegu&family=Sofadi+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper gaegu-regular">
       <div class="top">
         <div class="top_child">
           <div><img src="css/img/pet-resort-logo.webp" alt="loga" /></div>
           <div><h2>Pet Resort</h2></div>
         </div>
-        <div class="top_child">
+        <div class="top_child ">
           <nav>
-            <ul class="menu">
+            <ul class="menu ">
               <li>
                 <a
-                  class="no_line"
+                  class="no_line "
                   href="https://play.google.com/store/apps/details?id=com.google.android.apps.chromecast.app&hl=sv&pli=1"
                   >Home</a
                 >
@@ -65,12 +71,12 @@
           <img src="css/img/logo-AstraZeneca.webp" alt="logo-AstraZeneca" />
         </div>
         <div class="partners_logo">
-          <img src="css/img/logo-fedex.webp" alt="logo-fedex" />
-        </div>
-        <div class="partners_logo">
           <img src="css/img/logo-chatgpt.webp" alt="logo-chatgpt" />
         </div>
         <div class="partners_logo">
+          <img src="css/img/logo-fedex.webp" alt="logo-fedex" />
+        </div>
+        <div class="partners_logo" id="gpt">
           <img src="css/img/logo-gucci.webp" alt="logo-gucci" />
         </div>
         <div class="partners_logo">
@@ -83,7 +89,7 @@
       <div class="column1 container padding radius">
         <div>
           <img
-            class="radius"
+            class="radius column_img"
             src="css/img/dog-wear.webp"
             alt="Cute dogs with cloths"
           />
@@ -99,7 +105,11 @@
       </div>
       <div class="column2 container padding radius">
         <div>
-          <img class="radius" src="css/img/4dogs.webp" alt="4 dogs in a bed" />
+          <img
+            class="radius column_img"
+            src="css/img/4dogs.webp"
+            alt="4 dogs in a bed"
+          />
         </div>
         <h2>Buddies for life</h2>
         <p>
@@ -112,7 +122,11 @@
       </div>
       <div class="column3 container padding radius">
         <div>
-          <img class="radius" src="css/img/ritz.webp" alt="cute dog" />
+          <img
+            class="radius column_img"
+            src="css/img/ritz.webp"
+            alt="cute dog"
+          />
         </div>
         <h2>Fine Dinening</h2>
         <p>
