--- a/assets/index.html
+++ b/assets/index.html
@@ -96,10 +96,7 @@
         </div>
         <h2>Merch</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ab ut
-          ratione nostrum, impedit blanditiis mollitia asperiores autem
-          consequatur hic animi eos ea repudiandae facilis aut earum voluptates
-          veritatis ducimus.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <a href="">Boka</a>
       </div>
@@ -113,10 +110,7 @@
         </div>
         <h2>Buddies for life</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-          consequatur hic, deserunt recusandae sunt quos et maiores consequuntur
-          accusantium fugiat, ducimus fuga aut eligendi tempore natus unde
-          repudiandae? Esse, ea?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <a href="">Boka</a>
       </div>
@@ -130,10 +124,7 @@
         </div>
         <h2>Fine Dinening</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-          consequatur, eos sapiente beatae ut pariatur eligendi adipisci
-          obcaecati dolore explicabo minima quas, repudiandae, rem nesciunt qui
-          saepe atque maxime recusandae.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <a href="">Boka</a>
       </div>
