Make vaiable for phone

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="wrapper gaegu-regular">
+    <div class="wrapper gaegu-regular" id="wrapper-block">
       <div class="top">
         <div class="top_child">
           <div><img src="css/img/pet-resort-logo.webp" alt="loga" /></div>
@@ -58,13 +58,15 @@
           <p><a href="dog.se">Book grooming</a></p>
         </div>
       </div>
-      <div class="partners container padding radius">
-        <h2>Partners</h2>
-        <p>
-          We partner with many influental companies to bring your pet the best
-          experience possible.
-        </p>
-        <div class="partners_logo">
+      <div class="partners container padding radius center" id="partner-box">
+        <div>
+          <h2>Partners</h2>
+          <p>
+            We partner with many influental companies to bring your pet the best
+            experience possible.
+          </p>
+        </div>
+        <div><div class="partners_logo">
           <img src="css/img/logo-activision.webp" alt="logo-activision" />
         </div>
         <div class="partners_logo">
@@ -84,23 +86,24 @@
         </div>
         <div class="partners_logo">
           <img src="css/img/logo-paypal.webp" alt="logo-paypal" />
-        </div>
+        </div></div>
+        
       </div>
-      <div class="column1 container padding radius">
-        <div>
+      <div class="column1 container padding radius center">
+        <div class="">
           <img
             class="radius column_img"
             src="css/img/dog-wear.webp"
             alt="Cute dogs with cloths"
           />
         </div>
-        <h2>Merch</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <a href="">Boka</a>
+        <div>
+          <h2>Merch</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <a href="">Boka</a>
+        </div>
       </div>
-      <div class="column2 container padding radius">
+      <div class="column2 container padding radius center">
         <div>
           <img
             class="radius column_img"
@@ -108,13 +111,13 @@
             alt="4 dogs in a bed"
           />
         </div>
-        <h2>Buddies for life</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <a href="">Boka</a>
+        <div>
+          <h2>Buddies for life</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <a href="">Boka</a>
+        </div>
       </div>
-      <div class="column3 container padding radius">
+      <div class="column3 container padding radius center">
         <div>
           <img
             class="radius column_img"
@@ -122,11 +125,11 @@
             alt="cute dog"
           />
         </div>
-        <h2>Fine Dinening</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <a href="">Boka</a>
+        <div>
+          <h2>Fine Dinening</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <a href="">Boka</a>
+        </div>
       </div>
     </div>
   </body>
