Is comptible with more devices

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,9 +15,11 @@
   <body>
     <div class="wrapper gaegu-regular" id="wrapper-block">
       <div class="top">
-        <div class="top_child">
+        <div class="top_child center">
           <div><img src="css/img/pet-resort-logo.webp" alt="loga" /></div>
-          <div><h2>Pet Resort</h2></div>
+          <div>
+            <h2>Pet Resort</h2>
+          </div>
         </div>
         <div class="top_child">
           <nav>
@@ -47,7 +49,7 @@
           <p class="white_text">Where pets are royal</p>
         </div>
       </div>
-      <div class="grooming radius container padding">
+      <div class="grooming radius container padding" id="grooming_default">
         <div><img class="radius" src="css/img/groomin.webp" alt="" /></div>
         <div class="grooming_text">
           <h2>Oktober Groomin</h2>
@@ -66,28 +68,29 @@
             experience possible.
           </p>
         </div>
-        <div><div class="partners_logo">
-          <img src="css/img/logo-activision.webp" alt="logo-activision" />
+        <div>
+          <div class="partners_logo">
+            <img src="css/img/logo-activision.webp" alt="logo-activision" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-AstraZeneca.webp" alt="logo-AstraZeneca" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-chatgpt.webp" alt="logo-chatgpt" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-fedex.webp" alt="logo-fedex" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-gucci.webp" alt="logo-gucci" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-lego.webp" alt="logo-lego" />
+          </div>
+          <div class="partners_logo">
+            <img src="css/img/logo-paypal.webp" alt="logo-paypal" />
+          </div>
         </div>
-        <div class="partners_logo">
-          <img src="css/img/logo-AstraZeneca.webp" alt="logo-AstraZeneca" />
-        </div>
-        <div class="partners_logo">
-          <img src="css/img/logo-chatgpt.webp" alt="logo-chatgpt" />
-        </div>
-        <div class="partners_logo">
-          <img src="css/img/logo-fedex.webp" alt="logo-fedex" />
-        </div>
-        <div class="partners_logo" id="gpt">
-          <img src="css/img/logo-gucci.webp" alt="logo-gucci" />
-        </div>
-        <div class="partners_logo">
-          <img src="css/img/logo-lego.webp" alt="logo-lego" />
-        </div>
-        <div class="partners_logo">
-          <img src="css/img/logo-paypal.webp" alt="logo-paypal" />
-        </div></div>
-        
       </div>
       <div class="column1 container padding radius center">
         <div class="">
